# zed-cangjie-language

./: Cargo.toml  README.md  extension.toml
.github/workflows/: build.yml
languages/cangjie/: config.toml  grammar.js
src/: cangjie.rs
