[package]
name = "cangjie_zed_language"
version = "0.0.1"
publish = false
license = "MIT"

[lib]
path = "src/cangjie.rs"
crate-type = ["cdylib"]

[dependencies]
serde_json = "1.0"
uuid = { version = "1.1.2", features = ["v4"] }
zed_extension_api = { version = "0.7.0", default-features = false }
